[package]
name = "uosql"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[lib]
name = "uosql"
path = "src/lib.rs"

[[bin]]
name = "uosql-client"
path = "src/client/main.rs"

[dependencies]
log = "*"
byteorder = "0.3"
bincode = "0.4.0"
docopt = "0.6"
rustc-serialize = "0.3"

[dependencies.server]
path = "server"
