[package]
name = "uosql"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
build = "src/client/native/build.rs"

[lib]
name = "uosql"
path = "src/lib.rs"

[[bin]]
name = "uosql-client"
path = "src/client/main.rs"

[dependencies]
log = "*"
byteorder = "0.3"
bincode = "0.4.0"
docopt = "0.6"
rustc-serialize = "0.3"
ncurses = "5.73.0"
rand = "*"
regex = "0.1.41"
libc = "0.1.10"

[dependencies.server]
path = "server"

[build-dependencies]
gcc = "0.3"
